# semla-license-manager-impact-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build-and-test.sh  build-debug.sh  build.sh  cloud_projects.code-workspace  docker-compose.yaml  release.sh  run.sh  setup.sh  update_jwt_keys_from_wellknown.sh  wellknown_url.json
.devcontainer/: devcontainer.json
LICENSES/: LICENSE.txt
SEMLA/: CMakeLists.txt
license_manager/common_src/: lmc_feature.c  lmc_feature.h
license_manager/jansson/: CMakeLists.txt
license_manager/libcurl/: CMakeLists.txt
license_manager/libjwt/: CMakeLists.txt
license_manager/public_key_jwt/: CMakeLists.txt  GenPublicKeyJwtH.cmake  IncludeGenPublicKeyJwtH.cmake  update_jwt_keys_from_wellknown.py
license_manager/src/: CMakeLists.txt  lve_license_impact.c  mfl_common.h  mfl_interface.c  mfl_interface.h  mfl_jwt.c  mfl_jwt.h  mfl_jwt_curl.c  mfl_jwt_curl.h  mfl_jwt_license_file.c  mfl_jwt_license_file.h  mfl_jwt_license_file_decrypt_file.c  mfl_jwt_license_file_decrypt_file.h  mfl_jwt_util.c  mfl_jwt_util.h
license_manager/tests/: CMakeLists.txt  mfl_test_gen_public_key_jwt_h.c  test_mfl_license_check.c  unit_test_util.c
license_manager/tests/include/: unit_test_util.h
license_manager/tests/sslecho/: CMakeLists.txt  README.md  cert.pem  key.pem  sslecho.c
license_manager/tests/sslecho/include/: sslecho.h
license_manager/tests/test_public_keys/: README.md  private_key_jwt.pem  private_keys_jwt.txt  public_key_jwt.pem  public_keys_jwt.txt  public_keys_jwt_key_id.txt
openssl/: CMakeLists.txt
