set(LIBJWT_ARCHIVE_URL "file://${CMAKE_SOURCE_DIR}/SemlaLibJWT-1.0.14-linux64-gcc485.zip")
set(LIBJWT_ARCHIVE_EXPECTED_HASH_SHA256 "c4dd4c93a1e493b75014c09e04da118227b88aec5fc7a4772627cf05ab05cdfd")

message(STATUS "LIBJWT_ARCHIVE_URL=${LIBJWT_ARCHIVE_URL}")
message(STATUS "LIBJWT_ARCHIVE_EXPECTED_HASH_SHA256=${LIBJWT_ARCHIVE_EXPECTED_HASH_SHA256}")


string(REGEX REPLACE ".*/" "" LIBJWT_ARCHIVE_FILENAME ${LIBJWT_ARCHIVE_URL})

# use the 'stem' = the filename without the .zip extension as the destination directory when extracting the archive
string(REGEX REPLACE ".zip$" "" LIBJWT_ARCHIVE_FILENAME_STEM ${LIBJWT_ARCHIVE_FILENAME})
message(STATUS "Will use LIBJWT from ${LIBJWT_ARCHIVE_URL}")


file(DOWNLOAD
    ${LIBJWT_ARCHIVE_URL}
    ${LIBJWT_ARCHIVE_FILENAME}
    EXPECTED_HASH SHA256=${LIBJWT_ARCHIVE_EXPECTED_HASH_SHA256}
    TLS_VERIFY ON
    NETRC OPTIONAL
)
file(ARCHIVE_EXTRACT INPUT ${LIBJWT_ARCHIVE_FILENAME}
    DESTINATION "${CMAKE_BINARY_DIR}/${LIBJWT_ARCHIVE_FILENAME_STEM}"
)
add_library(jwt STATIC IMPORTED)
set_target_properties(jwt PROPERTIES IMPORTED_LOCATION ${CMAKE_BINARY_DIR}/${LIBJWT_ARCHIVE_FILENAME_STEM}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}jwt${CMAKE_STATIC_LIBRARY_SUFFIX})
if(NOT DEFINED ssl_libs)
    message(FATAL_ERROR "ssl_libs is not defined")
endif()
target_link_libraries(jwt INTERFACE jansson ${ssl_libs} ${extra_ssl_libs})
include_directories(${CMAKE_BINARY_DIR}/${LIBJWT_ARCHIVE_FILENAME_STEM}/include)

